# AnalysisWork

./: README.md
docker_study/: setup.sh
docker_study/src/: CMakeLists.txt  IntMaker_module.cc  IntProducer_module.cc  IntUser_module.cc  IntsMaker_module.cc  IntsUser_module.cc  SimpleProducts.h  exercise_maker_int.fcl  exercise_maker_ints.fcl  produce_ints.fcl
docker_study/src/ups/: product_deps
examples/scatter_gather/: Makefile  hostfile  main.cc  replace_cout.cc  runme.sh
image_study/: setup.sh
image_study/src/: CMakeLists.txt  ParaviewExtract_module.cc  classes.h  classes_def.xml  classes_def.xml~  extract_paraview.fcl
lariat/: EXAMPLE_RUN.txt  G4Helper.cxx  ParaviewExtract_module.cc  SETUP_LARIAT.txt  SETUP_NUTOOLS.txt  extract_paraview.fcl  jbkLArG4.mac  lariat_setup.sh  lariat_ups.sh  read_points.py  run.r  runsim.fcl  runsim_voxel.fcl
ml_study/: .gitignore  setup.sh
ml_study/src/: CMakeLists.txt  ExtractWaveforms_module.cc  extract_raw_tracks.fcl  extract_wf.fcl  get_answer.py  make_eval.py  make_windows.py  model.py  model2.py  only_noise.py  run.py  run.r  runme.sh  runme2.sh  runme3.sh  split_range.py  test.r
ml_study/src/ups/: product_deps
rnn_experiments/: experiment_template.yaml  multiwire_classify.py  rnn_classify.py  rnn_readme.txt  ww_classify.py
rnn_experiments/BidirectionalLSTM/: 184685_fnoise_U.pib_exp4a_performance.txt  184685_wnoise_U.pib_exp4a_performance.txt  exp4a.yaml  exp4a_model.yaml  exp4a_trained_weights.h5  log_gpu_exp4a  log_gpu_exp4a.1  log_gpu_exp4a.2  log_gpu_exp4a.3  rnn_train.py  script_exp4a
rnn_experiments/BruteForce/: 184685_fnoise_U.pib_exp7a_performance.txt  184685_wnoise_U.pib_exp7a_performance.txt  exp7a.yaml  exp7a_best_val_loss_weights.h5  exp7a_model.yaml  exp7b.yaml  log_gpu_exp7a  log_gpu_exp7b  log_gpu_exp7c  log_gpu_exp7d  log_gpu_exp7e  log_gpu_exp7f  log_gpu_exp7g  log_gpu_exp7h  log_gpu_exp7i  log_gpu_exp7j  multiwire_train.py  script_exp7a  script_exp7c  script_exp7d  script_exp7e  script_exp7f  script_exp7g  script_exp7h  script_exp7i  script_exp7j
rnn_experiments/GRU/: 184685_fnoise_U.pib_exp10a_performance.txt  184685_wnoise_U.pib_exp10a_performance.txt  exp10a.yaml  exp10a_best_val_loss_weights.h5  exp10a_model.yaml  exp10a_trained_weights.h5  log_gpu_ex10a  log_gpu_ex10a.1  script_exp10a
rnn_experiments/LSTM/: 184685_fnoise_U.pib_exp2a_performance.txt  184685_wnoise_U.pib_exp2a_performance.txt  exp2a.yaml  exp2a_model.yaml  exp2a_trained_weights.h5  log_gpu_exp2a  log_gpu_exp2a.1  log_gpu_exp2a.2  rnn_experiment.py  script_exp2a
rnn_experiments/LongSequenceLSTM/: 184685_fnoise_U.pib_exp5a_performance.txt  184685_wnoise_U.pib_exp5a_performance.txt  exp5a.yaml  exp5a_model.yaml  exp5a_trained_weights.h5  log_gpu_exp5a  log_gpu_exp5a.1  log_gpu_exp5a.2  script_exp5a  ww_classify.py  ww_train.py
rnn_experiments/MultipleAttributes/: 184685_fnoise_U.pib_exp6a_performance.txt  184685_wnoise_U.pib_exp6a_performance.txt  exp6a.yaml  exp6a_model.yaml  exp6a_trained_weights.h5  exp6b.yaml  log_gpu_exp6a  log_gpu_exp6a.1  log_gpu_exp6a.2  log_gpu_exp6a.3  log_gpu_exp6a.4  log_gpu_exp6a.5  multiwire_classify.py  script_exp6a
rnn_experiments/SimpleRNN/: 184685_fnoise_U.pib_exp1a_performance.txt  184685_wnoise_U.pib_exp1a_performance.txt  exp1a.yaml  exp1a_model.yaml  exp1a_trained_weights.h5  log_gpu_exp1a  rnn_classify.py  script_exp1a
rnn_experiments/StatefulLSTM/: 184685_fnoise_U.pib_exp3a_performance.txt  184685_wnoise_U.pib_exp3a_performance.txt  exp3a.yaml  exp3a_model.yaml  exp3a_trained_weights.h5  log_gpu_exp3a  log_gpu_exp3a.1  log_gpu_exp3a.2  log_gpu_exp3a.3  log_gpu_exp3a.4  script_exp3a
study/: setup.sh
study/Owen/: ParaviewExtract_module.cc  README.txt
study/src/: CMakeLists.txt  ConvertNova.cxx  ConvertNova2.cxx  ConvertWaveform.cxx  ConvertWaveform2.cxx  ConvertWaveform3.cxx  InitialEvents.txt  ParaviewExtract_module.cc  README.txt  extract_paraview.fcl  extract_raw.fcl  fhicl_test.cc  pair_test.fcl  test_read.py
study/src/ups/: product_deps
